# mlops

./: README.md
mlflow-server/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
prefect-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
prefect-server/src/prefect_server/api/: app.py
prefect-server/src/prefect_server/api/config/: auth.py
prefect-server/src/prefect_server/api/routes/: health.py  metrics.py
