[tool.poetry]
name = "prefect_server"
version = "1.0.0"
description = ""
authors = ["Samir Nunes da Silva"]
readme = "README.md"
packages = [{include = "prefect_server", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
prefect = "^3.1.9"
boto3 = "^1.35.87"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.0"
prometheus-client = "^0.21.1"
fastapi = "^0.115.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.5"
pytest-asyncio = "^0.24.0"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
